added text boxes, testing box sizes

--- a/index.html
+++ b/index.html
@@ -1,17 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Marlon Umeadi</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
-        <nav class="navbar sticky-top navbar-dark bg-dark">
-                <h4>Marlon Umeadi</h4>
-              </nav>
-    
+    <nav class="navbar sticky-top navbar-dark bg-dark">
+        <h4>Marlon Umeadi</h4>
+    </nav>
+    <div class="container bg-dark">
+            <div class="my-3 py-3 bg-white container">
+                    <h2 class="font-weight-bold">About Me</h2>
+                    <hr>
+                    <div>
+                        <img class="col-2 col-auto img-thumbnail float-left mr-3 p-0" src="assets/images/profile.jpg" alt="Marlon Umeadi Profile Picture">
+                        <p class="biotext">
+                            Greetings! My name is Marlon Umeadi, and I'm an underwriter at Regions bank. The primary role of an underwriter is to utilize consumer lending laws and policies to make decisions on home equity loan applications. Prior to being an underwriter, I had the advantage of working in the front office. Underwriting is a back office role, so my background has given me a unique exposure to both sides of the bank. Banking and finance are vast worlds that are constantly evolving. This makes maintaining a presense in the digital age a top priority for financial institutions.  
+                        </p>
+                        <br>
+                        <p class="biotext">
+                            One of my goals from this bootcamp is to combine my background in finance with web development. I'm hoping this will allow me to transition into a role that allows me to tap into my creativity. When I'm not underwriting applications, and sharpening my web development skills I'm a dad of 13 houseplants. I also like to stay physically active with yoga, boxing, and calisthenics. I instruct calisthenics classes 3 days a week during the warmer months. Upon completion of the Trilogy Code Bootcamp, I plan on delving more into my yoga practice.
+                        </p>
+                        <br>
+                        <br>
+                    </div>
+                </div>
+                <br>
+                <br>
+                <div class="my-3 py-3 bg-white container">
+                        <h2 class="font-weight-bold">Portfolio</h2>
+                        <hr>
+                        <div>
+                            <img class="col-2 col-auto img-thumbnail float-left mr-3 p-0" src="assets/images/profile.jpg" alt="Marlon Umeadi Profile Picture">
+                            <p class="biotext">
+                                Greetings! My name is Marlon Umeadi, and I'm an underwriter at Regions bank. The primary role of an underwriter is to utilize consumer lending laws and policies to make decisions on home equity loan applications. Prior to being an underwriter, I had the advantage of working in the front office. Underwriting is a back office role, so my background has given me a unique exposure to both sides of the bank. Banking and finance are vast worlds that are constantly evolving. This makes maintaining a presense in the digital age a top priority for financial institutions.  
+                            </p>
+                            <br>
+                            <p class="biotext">
+                                One of my goals from this bootcamp is to combine my background in finance with web development. I'm hoping this will allow me to transition into a role that allows me to tap into my creativity. When I'm not underwriting applications, and sharpening my web development skills I'm a dad of 13 houseplants. I also like to stay physically active with yoga, boxing, and calisthenics. I instruct calisthenics classes 3 days a week during the warmer months. Upon completion of the Trilogy Code Bootcamp, I plan on delving more into my yoga practice.
+                            </p>
+                            <br>
+                            <br>
+                        </div>
+                    </div>
+                    <br>
+                    <br>
+                    <div class="my-3 py-3 bg-white container">
+                            <h2 class="font-weight-bold">Contact Me</h2>
+                            <hr>
+                            <div>
+                                <img class="col-2 col-auto img-thumbnail float-left mr-3 p-0" src="assets/images/profile.jpg" alt="Marlon Umeadi Profile Picture">
+                                <p class="biotext">
+                                    Greetings! My name is Marlon Umeadi, and I'm an underwriter at Regions bank. The primary role of an underwriter is to utilize consumer lending laws and policies to make decisions on home equity loan applications. Prior to being an underwriter, I had the advantage of working in the front office. Underwriting is a back office role, so my background has given me a unique exposure to both sides of the bank. Banking and finance are vast worlds that are constantly evolving. This makes maintaining a presense in the digital age a top priority for financial institutions.  
+                                </p>
+                                <br>
+                                <p class="biotext">
+                                    One of my goals from this bootcamp is to combine my background in finance with web development. I'm hoping this will allow me to transition into a role that allows me to tap into my creativity. When I'm not underwriting applications, and sharpening my web development skills I'm a dad of 13 houseplants. I also like to stay physically active with yoga, boxing, and calisthenics. I instruct calisthenics classes 3 days a week during the warmer months. Upon completion of the Trilogy Code Bootcamp, I plan on delving more into my yoga practice.
+                                </p>
+                                <br>
+                                <br>
+                            </div>
+                        </div>
+                
+
+
+
+
+
+
+    </div>
+    <footer class="footer">
+        <div class="container">
+        <h6>Marlon Umeadi | &copy; 2019
+            </h6>
+        </div>
+    </footer>
 </body>
+</body>
+
 </html>
