--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav class="navbar sticky-top navbar-dark bg-dark">
-        
+
         <ul class="nav nav-tabs justify-content-start">
             <li class="nav-item">
                 <a class="nav-link active" href="#aboutSection">About Me</a>
@@ -27,103 +27,137 @@
 
         </ul>
         <span class="navbar-brand justify-content-end">
-                <h4>Marlon Umeadi</h4>
-            </span>
+            <h4>Marlon Umeadi</h4>
+        </span>
     </nav>
     <div class="container bg-dark">
         <div class="row">
             <div class="col col-md-11">
-        <div class="my-3 py-3 bg-white container">
-            <h2 class="font-weight-bold" id="aboutSection">About Me</h2>
-            <hr>
-            <div>
-                <img class="col-2 col-auto img-thumbnail float-left mr-3 p-0" src="assets/images/profile.jpg"
-                    alt="Marlon Umeadi Profile Picture">
-                <p class="biotext">
-                    Greetings! My name is Marlon Umeadi, and I'm an underwriter at Regions bank. The primary role of an
-                    underwriter is to utilize consumer lending laws and policies to make decisions on home equity loan
-                    applications. Prior to being an underwriter, I had the advantage of working in the front office.
-                    Underwriting is a back office role, so my background has given me a unique exposure to both sides of
-                    the bank. Banking and finance are vast worlds that are constantly evolving. This makes maintaining a
-                    presense in the digital age a top priority for financial institutions.
-                </p>
+                <div class="my-3 py-3 bg-white container">
+                    <h2 class="font-weight-bold" id="aboutSection">About Me</h2>
+                    <hr>
+                    <div>
+                        <img class="col-2 col-auto img-thumbnail float-left mr-3 p-0" src="assets/images/profile.jpg"
+                            alt="Marlon Umeadi Profile Picture">
+                        <p class="biotext">
+                            Greetings! My name is Marlon Umeadi, and I'm an underwriter at Regions bank. The primary
+                            role of an
+                            underwriter is to utilize consumer lending laws and policies to make decisions on home
+                            equity loan
+                            applications. Prior to being an underwriter, I had the advantage of working in the front
+                            office.
+                            Underwriting is a back office role, so my background has given me a unique exposure to both
+                            sides of
+                            the bank. Banking and finance are vast worlds that are constantly evolving. This makes
+                            maintaining a
+                            presense in the digital age a top priority for financial institutions.
+                        </p>
+                        <br>
+                        <p class="biotext">
+                            One of my goals from this bootcamp is to combine my background in finance with web
+                            development. I'm
+                            hoping this will allow me to transition into a role that allows me to tap into my
+                            creativity. When
+                            I'm not underwriting applications, and sharpening my web development skills I'm a dad of 13
+                            houseplants. I also like to stay physically active with yoga, boxing, and calisthenics. I
+                            instruct
+                            calisthenics classes 3 days a week during the warmer months. Upon completion of the Trilogy
+                            Code
+                            Bootcamp, I plan on delving more into my yoga practice.
+                        </p>
+                        <br>
+                        <br>
+                    </div>
+                </div>
                 <br>
-                <p class="biotext">
-                    One of my goals from this bootcamp is to combine my background in finance with web development. I'm
-                    hoping this will allow me to transition into a role that allows me to tap into my creativity. When
-                    I'm not underwriting applications, and sharpening my web development skills I'm a dad of 13
-                    houseplants. I also like to stay physically active with yoga, boxing, and calisthenics. I instruct
-                    calisthenics classes 3 days a week during the warmer months. Upon completion of the Trilogy Code
-                    Bootcamp, I plan on delving more into my yoga practice.
-                </p>
+                <br>
+                <div class="my-3 py-3 bg-white container">
+                    <h2 class="font-weight-bold" id="portfolioSection">Portfolio</h2>
+                    <hr>
+                    <div>
+                        <img class="col-2 col-auto img-thumbnail float-left mr-3 p-0" src="assets/images/profile.jpg"
+                            alt="Marlon Umeadi Profile Picture">
+                        <p class="biotext">
+                            Greetings! My name is Marlon Umeadi, and I'm an underwriter at Regions bank. The primary
+                            role of an
+                            underwriter is to utilize consumer lending laws and policies to make decisions on home
+                            equity loan
+                            applications. Prior to being an underwriter, I had the advantage of working in the front
+                            office.
+                            Underwriting is a back office role, so my background has given me a unique exposure to both
+                            sides of
+                            the bank. Banking and finance are vast worlds that are constantly evolving. This makes
+                            maintaining a
+                            presense in the digital age a top priority for financial institutions.
+                        </p>
+                        <br>
+                        <p class="biotext">
+                            One of my goals from this bootcamp is to combine my background in finance with web
+                            development. I'm
+                            hoping this will allow me to transition into a role that allows me to tap into my
+                            creativity. When
+                            I'm not underwriting applications, and sharpening my web development skills I'm a dad of 13
+                            houseplants. I also like to stay physically active with yoga, boxing, and calisthenics. I
+                            instruct
+                            calisthenics classes 3 days a week during the warmer months. Upon completion of the Trilogy
+                            Code
+                            Bootcamp, I plan on delving more into my yoga practice.
+                        </p>
+                        <br>
+                        <br>
+                    </div>
+                </div>
                 <br>
                 <br>
+                <div class="my-3 py-3 bg-white container">
+                    <h2 class="font-weight-bold" id="contactSection">Contact</h2>
+                    <hr>
+                    <div>
+                        <img class="col-2 col-auto img-thumbnail float-left mr-3 p-0" src="assets/images/profile.jpg"
+                            alt="Marlon Umeadi Profile Picture">
+                        <p class="biotext">
+                            Greetings! My name is Marlon Umeadi, and I'm an underwriter at Regions bank. The primary
+                            role of an
+                            underwriter is to utilize consumer lending laws and policies to make decisions on home
+                            equity loan
+                            applications. Prior to being an underwriter, I had the advantage of working in the front
+                            office.
+                            Underwriting is a back office role, so my background has given me a unique exposure to both
+                            sides of
+                            the bank. Banking and finance are vast worlds that are constantly evolving. This makes
+                            maintaining a
+                            presense in the digital age a top priority for financial institutions.
+                        </p>
+                        <br>
+                        <p class="biotext">
+                            One of my goals from this bootcamp is to combine my background in finance with web
+                            development. I'm
+                            hoping this will allow me to transition into a role that allows me to tap into my
+                            creativity. When
+                            I'm not underwriting applications, and sharpening my web development skills I'm a dad of 13
+                            houseplants. I also like to stay physically active with yoga, boxing, and calisthenics. I
+                            instruct
+                            calisthenics classes 3 days a week during the warmer months. Upon completion of the Trilogy
+                            Code
+                            Bootcamp, I plan on delving more into my yoga practice.
+                        </p>
+                        <br>
+                        <br>
+                    </div>
+                </div>
             </div>
-        </div>
-        <br>
-        <br>
-        <div class="my-3 py-3 bg-white container">
-            <h2 class="font-weight-bold" id="portfolioSection">Portfolio</h2>
-            <hr>
-            <div>
-                <img class="col-2 col-auto img-thumbnail float-left mr-3 p-0" src="assets/images/profile.jpg"
-                    alt="Marlon Umeadi Profile Picture">
-                <p class="biotext">
-                    Greetings! My name is Marlon Umeadi, and I'm an underwriter at Regions bank. The primary role of an
-                    underwriter is to utilize consumer lending laws and policies to make decisions on home equity loan
-                    applications. Prior to being an underwriter, I had the advantage of working in the front office.
-                    Underwriting is a back office role, so my background has given me a unique exposure to both sides of
-                    the bank. Banking and finance are vast worlds that are constantly evolving. This makes maintaining a
-                    presense in the digital age a top priority for financial institutions.
-                </p>
-                <br>
-                <p class="biotext">
-                    One of my goals from this bootcamp is to combine my background in finance with web development. I'm
-                    hoping this will allow me to transition into a role that allows me to tap into my creativity. When
-                    I'm not underwriting applications, and sharpening my web development skills I'm a dad of 13
-                    houseplants. I also like to stay physically active with yoga, boxing, and calisthenics. I instruct
-                    calisthenics classes 3 days a week during the warmer months. Upon completion of the Trilogy Code
-                    Bootcamp, I plan on delving more into my yoga practice.
-                </p>
-                <br>
-                <br>
-            </div>
-        </div>
-        <br>
-        <br>
-        <div class="my-3 py-3 bg-white container">
-            <h2 class="font-weight-bold" id="contactSection">Contact</h2>
-            <hr>
-            <div>
-                <img class="col-2 col-auto img-thumbnail float-left mr-3 p-0" src="assets/images/profile.jpg"
-                    alt="Marlon Umeadi Profile Picture">
-                <p class="biotext">
-                    Greetings! My name is Marlon Umeadi, and I'm an underwriter at Regions bank. The primary role of an
-                    underwriter is to utilize consumer lending laws and policies to make decisions on home equity loan
-                    applications. Prior to being an underwriter, I had the advantage of working in the front office.
-                    Underwriting is a back office role, so my background has given me a unique exposure to both sides of
-                    the bank. Banking and finance are vast worlds that are constantly evolving. This makes maintaining a
-                    presense in the digital age a top priority for financial institutions.
-                </p>
-                <br>
-                <p class="biotext">
-                    One of my goals from this bootcamp is to combine my background in finance with web development. I'm
-                    hoping this will allow me to transition into a role that allows me to tap into my creativity. When
-                    I'm not underwriting applications, and sharpening my web development skills I'm a dad of 13
-                    houseplants. I also like to stay physically active with yoga, boxing, and calisthenics. I instruct
-                    calisthenics classes 3 days a week during the warmer months. Upon completion of the Trilogy Code
-                    Bootcamp, I plan on delving more into my yoga practice.
-                </p>
-                <br>
-                <br>
-            </div>
-        </div>
-    </div>
-    <div class="col col-md-1">
+            <div class="col col-md-1">
+                <ul class="noBull">
+                    <li><a href="https://www.linkedin.com/in/marlon-umeadi-24993320" target="_blank"><img
+                                src="assets/images/Lnkdin.png" alt="Linkedin icon"></a></li>
+                    <li><a href="https://github.com/umeadi" target="_blank"><img src="assets/images/GitHub-Light.png"
+                                alt="Github icon"></a></li>
 
-    </div>
-</div>
-    <!-- <footer class="footer">
+                    <li><a href=""><img src="assets/images/pdf.png" alt="PDF icon"></a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- <footer class="footer">
         <div class="container">
             <h6>Marlon Umeadi | &copy; 2019
             </h6>
