updated links and icons for linkedin, github, and resume pdf

--- a/index.html
+++ b/index.html
@@ -152,8 +152,7 @@
                                 src="assets/images/Lnkdin.png" alt="Linkedin icon"></a></li>
                     <li><a href="https://github.com/umeadi" target="_blank"><img src="assets/images/GitHub-Light.png"
                                 alt="Github icon"></a></li>
-
-                    <li><a href=""><img src="assets/images/pdf.png" alt="PDF icon"></a></li>
+                    <li><a href="https://drive.google.com/file/d/1zv0nXnKIMBT_U4ZPKbqHvT8U8oMRUeFf/view" target="_blank"><img src="assets/images/pdf.png" alt="PDF icon"></a></li>
                 </ul>
             </div>
         </div>
