swapped image grid for carousel due to alignment issues. Need to resize photos for carousel.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
                             Code
                             Bootcamp, I plan on delving more into my yoga practice.
                         </p>
+                        <p>&nbsp;</p>
+                        <p>&nbsp;</p>
+                        <p>&nbsp;</p>
+                        <p>&nbsp;</p>
                         <br>
                         <br>
                     </div>
@@ -74,77 +78,107 @@
                 <div class="my-3 py-3 bg-white container">
                     <h2 class="font-weight-bold" id="portfolioSection">Portfolio</h2>
                     <hr>
-                    <div>
-                        <img class="col-2 col-auto img-thumbnail float-left mr-3 p-0" src="assets/images/profile.jpg"
-                            alt="Marlon Umeadi Profile Picture">
-                        <p class="biotext">
-                            Greetings! My name is Marlon Umeadi, and I'm an underwriter at Regions bank. The primary
-                            role of an
-                            underwriter is to utilize consumer lending laws and policies to make decisions on home
-                            equity loan
-                            applications. Prior to being an underwriter, I had the advantage of working in the front
-                            office.
-                            Underwriting is a back office role, so my background has given me a unique exposure to both
-                            sides of
-                            the bank. Banking and finance are vast worlds that are constantly evolving. This makes
-                            maintaining a
-                            presense in the digital age a top priority for financial institutions.
-                        </p>
-                        <br>
-                        <p class="biotext">
-                            One of my goals from this bootcamp is to combine my background in finance with web
-                            development. I'm
-                            hoping this will allow me to transition into a role that allows me to tap into my
-                            creativity. When
-                            I'm not underwriting applications, and sharpening my web development skills I'm a dad of 13
-                            houseplants. I also like to stay physically active with yoga, boxing, and calisthenics. I
-                            instruct
-                            calisthenics classes 3 days a week during the warmer months. Upon completion of the Trilogy
-                            Code
-                            Bootcamp, I plan on delving more into my yoga practice.
-                        </p>
-                        <br>
-                        <br>
+                    <div class="row">
+                        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <a href="https://umeadi.github.io/unit-4-game/" target="_blank"><img
+                                            class="d-block w-100" src="assets/images/crystal1.jpg"
+                                            alt="Crystal Collector Game"></a>
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <a href="https://umeadi.github.io/unit-4-game/" target="_blank">
+                                            <h5 style="color:white" ;>Crystal Collector Game</h5>
+                                        </a>
+                                        <p>Match the current score without going over!</p>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <a href="https://umeadi.github.io/Group-Project-1/" target="_blank"><img
+                                            class="d-block w-100" src="assets/images/cryptocurrency-1.jpg"
+                                            alt="Crypto Currency Tracker"></a>
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <a href="https://umeadi.github.io/Group-Project-1/" target="_blank">
+                                            <h5 style="color:white" ;>iCrypto Currency Tracker</h5>
+                                        </a>
+                                        <p>Track only the crypto currencies that YOU want!</p>
+                                    </div>
+                                </div>
+                                    <div class="carousel-item">
+                                        <a href="https://umeadi.github.io/TriviaGame/" target="_blank"><img class="d-block w-100" src="assets/images/marvellogohd.png"
+                                                alt="Marvel Trivia Game"></a>
+                                        <div class="carousel-caption d-none d-md-block">
+                                            <a href="https://umeadi.github.io/TriviaGame/" target="_blank">
+                                                <h5 style="color:white" ;>Marvel Trivia Game</h5>
+                                            </a>
+                                            <p>Assemble! And test your Marvel knowledge!</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
+                                    data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button"
+                                    data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+                        </div>
+
+
+                    </div>
+                    <br>
+                    <br>
+                    <div class="my-3 py-3 bg-white container">
+                        <h2 class="font-weight-bold" id="contactSection">Contact</h2>
+                        <hr>
+                        <div>
+                            <img class="col-2 col-auto img-thumbnail float-left mr-3 p-0"
+                                src="assets/images/profile.jpg" alt="Marlon Umeadi Profile Picture">
+                            <p class="biotext">
+                                Greetings! My name is Marlon Umeadi, and I'm an underwriter at Regions bank. The primary
+                                role of an
+                                underwriter is to utilize consumer lending laws and policies to make decisions on home
+                                equity loan
+                                applications. Prior to being an underwriter, I had the advantage of working in the front
+                                office.
+                                Underwriting is a back office role, so my background has given me a unique exposure to
+                                both
+                                sides of
+                                the bank. Banking and finance are vast worlds that are constantly evolving. This makes
+                                maintaining a
+                                presense in the digital age a top priority for financial institutions.
+                            </p>
+                            <br>
+                            <p class="biotext">
+                                One of my goals from this bootcamp is to combine my background in finance with web
+                                development. I'm
+                                hoping this will allow me to transition into a role that allows me to tap into my
+                                creativity. When
+                                I'm not underwriting applications, and sharpening my web development skills I'm a dad of
+                                13
+                                houseplants. I also like to stay physically active with yoga, boxing, and calisthenics.
+                                I
+                                instruct
+                                calisthenics classes 3 days a week during the warmer months. Upon completion of the
+                                Trilogy
+                                Code
+                                Bootcamp, I plan on delving more into my yoga practice.
+                            </p>
+                            <br>
+                            <br>
+                        </div>
                     </div>
                 </div>
-                <br>
-                <br>
-                <div class="my-3 py-3 bg-white container">
-                    <h2 class="font-weight-bold" id="contactSection">Contact</h2>
-                    <hr>
-                    <div>
-                        <img class="col-2 col-auto img-thumbnail float-left mr-3 p-0" src="assets/images/profile.jpg"
-                            alt="Marlon Umeadi Profile Picture">
-                        <p class="biotext">
-                            Greetings! My name is Marlon Umeadi, and I'm an underwriter at Regions bank. The primary
-                            role of an
-                            underwriter is to utilize consumer lending laws and policies to make decisions on home
-                            equity loan
-                            applications. Prior to being an underwriter, I had the advantage of working in the front
-                            office.
-                            Underwriting is a back office role, so my background has given me a unique exposure to both
-                            sides of
-                            the bank. Banking and finance are vast worlds that are constantly evolving. This makes
-                            maintaining a
-                            presense in the digital age a top priority for financial institutions.
-                        </p>
-                        <br>
-                        <p class="biotext">
-                            One of my goals from this bootcamp is to combine my background in finance with web
-                            development. I'm
-                            hoping this will allow me to transition into a role that allows me to tap into my
-                            creativity. When
-                            I'm not underwriting applications, and sharpening my web development skills I'm a dad of 13
-                            houseplants. I also like to stay physically active with yoga, boxing, and calisthenics. I
-                            instruct
-                            calisthenics classes 3 days a week during the warmer months. Upon completion of the Trilogy
-                            Code
-                            Bootcamp, I plan on delving more into my yoga practice.
-                        </p>
-                        <br>
-                        <br>
-                    </div>
-                </div>
+
+                *
             </div>
             <div class="col col-md-1">
                 <ul class="noBull">
@@ -152,16 +186,26 @@
                                 src="assets/images/Lnkdin.png" alt="Linkedin icon"></a></li>
                     <li><a href="https://github.com/umeadi" target="_blank"><img src="assets/images/GitHub-Light.png"
                                 alt="Github icon"></a></li>
-                    <li><a href="https://drive.google.com/file/d/1zv0nXnKIMBT_U4ZPKbqHvT8U8oMRUeFf/view" target="_blank"><img src="assets/images/pdf.png" alt="PDF icon"></a></li>
+                    <li><a href="https://drive.google.com/file/d/1zv0nXnKIMBT_U4ZPKbqHvT8U8oMRUeFf/view"
+                            target="_blank"><img src="assets/images/pdf.png" alt="PDF icon"></a></li>
                 </ul>
             </div>
         </div>
-        <!-- <footer class="footer">
+    </div>
+    <!-- <footer class="footer">
         <div class="container">
             <h6>Marlon Umeadi | &copy; 2019
             </h6>
         </div>
     </footer> -->
+    <script src="http://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
